examples/pass/basics/unit_return.dew
// expect: 1
def main = fn { if true { 1 } else { 0 } -> stdout; };
