examples/fail/type/type_mismatch.dew
// expect error: [E003]
def main = fn { true + 1 -> stdout; };
